# Skill_Bin

./: .env.example  .gitignore  LICENSE  Readme.md  docker-compose.yml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: .gitkeep  20260618_0001_a1b2c3d4e5f6_initial_tables.py
backend/app/: db.py  main.py
backend/app/core/: config.py  deps.py  security.py
backend/app/models/: __init__.py  base.py  employee.py  employee_skill.py  employer.py  match_recommendation.py  project.py  project_skill_requirement.py  skill.py  task_outcome.py  verification_test.py
backend/app/routers/: __init__.py  auth.py
backend/app/schemas/: employer.py
backend/app/services/: __init__.py
backend/scripts/: seed_demo_data.py
backend/tests/: __init__.py
frontend/: .env.example
frontend/src/: App.jsx  index.css
frontend/src/api/: auth.js  client.js
frontend/src/hooks/: useAuth.js
frontend/src/pages/: LandingPage.css  LandingPage.jsx  LoginPage.css  LoginPage.jsx
